# nur

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.agents/rules/: braindocumentation.md  updatesmdfiles.md  workflow.md
colab/: README.md  embed_nur_colab.py
data/processed/: _cross_refs_summary.json  _summary_v3.json
docs/: ARCHITECTURE.md  CONTEXT.md  DATA_SOURCES.md  GROQ_REFERENCE.md  PHASES.md  PILLARS.md  RAG_PIPELINE_ARCHITECTURE.md  SETUP.md  brains.md
docs/v3/: 00_OVERVIEW.md  01_DATA_SOURCES.md  02_CHUNK_SCHEMA.md  03_TAFSIR_STRATEGY.md  04_RETRIEVAL_PIPELINE.md  05_EMBEDDING_DESIGN.md  06_GENERATION_VERIFICATION.md  07_FAILURE_MODES.md  08_EXAMPLES.md  README.md
scratch/: evaluate_embedding_formats.py  inspect_sparse.py  retrieval_audit_results.md  test_normalization_impact.py  test_retrieval_analysis.py  test_retrieval_audit.py
scripts/: 01_download_quran.py  02_download_hadith.py  03_download_tafsir.py  04_normalize_and_chunk.py  05_verify_phase1.py  _fixtures_zakat.json  benchmark_dense.py  colab_indexer.py  ground_truth.py  kaggle_context_synthesizer.py  test_dense_search.py  test_fusion.py  test_generator.py  test_ground_truth.py  test_mmr.py  test_multi_query.py  test_per_source.py  test_pipeline.py  test_query_decomposition.py  test_recall.py  test_sparse_search.py  verify_db.py  verify_ground_truth.py
scripts/v3/: 01_download_quran.py  02_download_hadith.py  03_download_tafsirs.py  03b_download_new_tafsirs.py  04_generate_context_cards.py  05_build_chunks.py  (+11 more)
tests/: test_arabic.py  test_sources.py
(+23 files in other folders)
